# weatherViz

./: .gitignore  CMakeLists.txt  README.md
assets/models/: Ground.mtl  Sky.mtl  Windmill.mtl  cube.mtl  monkey2.mtl
assets/shaders/: DiffuseFragmentShader.frag  DiffuseVertexShader.vert  SimpleVertexShader.vert  SkyShader.frag  SkyShader.vert  SolidShader.frag  SolidShader.vert  TextureShader.frag  TextureShader.vert
docs/: Doxyfile
include/: shader.hpp
include/LodePNG/: CMakeLists.txt
src/: console.cpp  console.hpp  image.cpp  image.hpp  main.cpp  main.hpp  object.cpp  object.hpp  vboIndexer.cpp  vboIndexer.hpp
src/assets/: image.cpp  image.hpp  material.hpp  mtlLoader.cpp  mtlLoader.hpp  objLoader.cpp  objLoader.hpp  shaders.hpp
src/objects/: object.cpp  object.hpp  windmill.cpp  windmill.hpp
